# dream_yara

./: .gitmodules  CMakeLists.txt  README.rst
.github/workflows/: ci_linux.yml  ci_misc.yml
include/raptor/: minimiser_model.cpp
include/raptor/include/raptor/: minimiser_model.hpp  shared.hpp
src/: CMakeLists.txt  bit_chunk.hpp  bits_bucket.h  d_bloom_filter.h  d_build_filter.cpp  d_indexer.cpp  d_kdx_filter.h  d_mapper.cpp  d_mapper.h  d_misc_options.h  mapper.h  misc_options.h  thresholder.h
test/: CMakeLists.txt
test/cli/: CMakeLists.txt  run_tests.py
test/data/: datasources.cmake
test/data/gold/: 64-viral-reads.tag.t1.sam
tests/: run_tests.py
tests/gold/: 64-viral-reads.rec.t1.sam  64-viral-reads.t1.sam
